<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".presentation.search.SearchFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/search_bg_color">

            <TextView
                android:id="@+id/tvSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/source_sans_pro_bold"
                android:text="@string/search_text"
                android:textColor="@color/search_text_color"
                android:textSize="27sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutSearch"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/search_edit_text_color"
                app:endIconDrawable="@drawable/ic_search"
                app:endIconMode="custom"
                app:endIconTint="#FF667A"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.08"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSearch">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro_regular"
                    android:hint="@string/where_next"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvTopDestinations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro_semibold"
                android:text="@string/top_destinations_text"
                android:textAllCaps="true"
                android:textColor="@color/search_text_color"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/tvSearch"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSearch" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSearchTopDestinations"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTopDestinations" />

            <TextView
                android:id="@+id/tvNearbyAttractions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/source_sans_pro_semibold"
                android:text="@string/nearby_attractions_text"
                android:textColor="@color/search_text_color"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/rvSearchTopDestinations"
                app:layout_constraintTop_toBottomOf="@id/rvSearchTopDestinations" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSearchNearbyAttractions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNearbyAttractions" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>
</layout>